--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "food app",
+  "name": "Food Ordering App",
   "version": "1.0.0",
   "description": "React",
   "scripts": {
@@ -13,7 +13,13 @@
   "author": "Anshul Wadhwa",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@testing-library/react": "^14.1.2",
+    "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.11.0",
     "postcss": "^8.4.33",
     "process": "^0.11.10",
